FindBugs:  Removing dead stores
git-svn-id: http://dev.eclipse.org/svnroot/technology/org.eclipse.stem/trunk@983 92a21009-5b66-0410-b83a-dc787c41c6e9